fix: align modal styling to figma design

--- a/src/styles.css
+++ b/src/styles.css
@@ -27,3 +27,6 @@ h3 {
 button {
   margin: 5px 0;
 }
+b {
+  font-family: "Montserrat-Bold", Arial, sans-serif;
+}
